--- a/styles1.css
+++ b/styles1.css
@@ -5,7 +5,7 @@
     font-family: 'Poppins', sans-serif;
 }
 .hero__section{
-    background: url(./images/heroSectionBackground.png);
+    background: url(images/heroSectionBackground.png);
     background-size: cover;
     background-position: center;
     color: white;
